fdo#51034 fix docx import of HYPERLINK field, l param

Change-Id: Ic6896f7c795d7d303bf7589a74afb937d4a8e8b5
(cherry picked from commit 68cb050f0fcd37a6b1e78c147402a521d24c25c1)